fix issue with footer on mobile

--- a/app/styles/components/results/_result_box.scss
+++ b/app/styles/components/results/_result_box.scss
@@ -38,7 +38,6 @@
     text-align: center;
     margin-left: -100%;
     width: 300%;
-    height: 20px;
     overflow: visible;
 
     .icon {
